Bug 257928 - No previews/thumbnails in the trash folder
Summary: No previews/thumbnails in the trash folder
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: SVN
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-26 00:36 UTC by Brendon Higgins
Modified: 2010-12-02 21:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brendon Higgins 2010-11-26 00:36:15 UTC
Version:           unspecified (using KDE 4.5.3) 
OS:                Linux

I don't think I've done anything wrong, and I couldn't find any options (that weren't already enabled) that would affect this. But since (I believe) the 4.5 series began, browsing the Trash (in my British English case, "Wastebin") folder in dolphin shows no previews or thumbnails for any of the files. That's a little irritating---trash is exactly the sort of place where you'd want to be able to quickly assess the contents of a file (images especially), in this case to determine if you're happy to delete them permanently by emptying the trash. It seems like a regression.

Reproducible: Always
Comment 1 Radu 2010-11-27 18:31:04 UTC
I've also noticed this problem in KDE 4.5.1.
Comment 2 Peter Penz 2010-11-30 17:08:06 UTC
Thanks for the report. You can temporary bypass this issue by going into Dolphin Preferences -> General -> Previews and increase the MB in the "Remote files above:" line. The issue is that the trash is considered as remote location and this must be fixed for this usecase...
Comment 3 Peter Penz 2010-12-02 21:55:37 UTC
SVN commit 1202948 by ppenz:

Fix issue that previews are not shown in the trash. The root cause is that KUrl::isLocalFile() for the trash returns false (which is correct corresponding to the documentation of isLocalFile()) and hence the maximum size for remote files is used (which is 0 per default). From a users point of view the trash should be considered as "local" and hence the maximum size for local files should be considered for previews.

BUG: 257928
FIXED-IN: 4.6.0


 M  +2 -1      previewjob.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1202948