Fix issue that previews are not shown in the trash. The root cause is that KUrl::isLocalFile() for the trash returns false (which is correct corresponding to the documentation of isLocalFile()) and hence the maximum size for remote files is used (which is 0 per default). From a users point of view the trash should be considered as "local" and hence the maximum size for local files should be considered for previews.

BUG: 257928
FIXED-IN: 4.6.0

svn path=/trunk/KDE/kdelibs/; revision=1202948